--- a/lstep_controller_test.ipynb
+++ b/lstep_controller_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4005\n"
+      "0\n",
+      "4005\n",
+      "0\n"
      ]
     }
    ],
@@ -33,18 +35,31 @@
     "    ctypes.c_int32)\n",
     "foo = ctypes.c_int32()\n",
     "\n",
-    "dll.LSX_CreateLSID(ctypes.byref(foo))\n",
+    "print(dll.LSX_CreateLSID(ctypes.byref(foo)))\n",
     "print(dll.LSX_Connect(foo))\n",
+    "print(dll.LSX_LoadConfig(foo, lstep_config))\n",
     "#print(foo.value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "import langpy\n",
+    "langpy.CreateLSID()\n"
    ]
   },
   {
