--- a/lstep_controller_test.ipynb
+++ b/lstep_controller_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "4005\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ctypes\n",
     "dll=ctypes.WinDLL(lstepdll+\".dll\")\n",
@@ -43,23 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import langpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "15\n"
+     ]
     }
    ],
    "source": [
-    "import langpy\n",
-    "langpy.CreateLSID()\n"
+    "LSID = 15\n",
+    "print(LSID)\n",
+    "langpy.CreateLSID(LSID)\n",
+    "print (LSID)\n",
+    "\n"
    ]
   },
   {
